--- a/build.gradle
+++ b/build.gradle
@@ -19,23 +19,6 @@ repositories {
 }
 
 dependencies {
-	/*implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'
-	
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    implementation 'org.apache.httpcomponents:httpclient:4.5'
- 
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.3'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'*/
     
 	implementation 'org.springframework.boot:spring-boot-starter-web'
    	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
@@ -46,7 +29,17 @@ dependencies {
    	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
    	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'
     
+    // jsonParse
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    
+    // lombok
+	implementation 'org.projectlombok:lombok'
+	
+	// smtp -> 이메일 보내기
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	
+	// jpaRepository-> 이메일 보내기
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
