스트링부트 버전 다운, aws 서버를 위해

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.2'
+	id 'org.springframework.boot' version '2.7.9'
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -27,7 +27,8 @@ dependencies {
    	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-   	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'
+   	implementation 'javax.servlet:jstl:1.2'  // springboot ver 2.x
+   	//implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'	// springboot ver 3.x
     
     // jsonParse
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
